<resources>
    <string name="app_name">DemoApiRequestApplication</string>
    <string name="username">User Name :</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="code">MSSV</string>
    <string name="name">Ten</string>
    <string name="age">Tuoi</string>
    <string name="sClass">Lop</string>
    <string name="email">Email</string>
    <string name="userID">ID:</string>
    <string name="product_name">product_name:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="producer">Producer:</string>
    <string name="Edit">Edit</string>
    <string name="Update">Update</string>
    <string name="Back">Back</string>
</resources>
